# salt-extension-migrate

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/saltext_migrate/: cli.py  migrate.py  rewrite.py
