[build-system]
requires = [
    "wheel",
    "setuptools>=50.3.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "saltext-migrate"
description = "Migrate Salt core modules into Salt extensions"
authors = [
    {name = "jeanluc", email = "lkubb@protonmail.com"},
    {name = "Pedro Algarvio", email = "pedro@algarvio.me"},
    {name = "Gareth J. Greenaway", email = "gareth@saltstack.com"},
]
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">= 3.8"
dependencies = [
    "plumbum",
    "bowler",
    "questionary",
    "copier>=9.3",
    "copier-templates-extensions",
    "pyyaml",
]
version = "1.3.2"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/salt-extensions/salt-extension-migrate"
Documentation = "https://salt-extensions.github.io/salt-extension-copier/topics/extraction.html"
Source = "https://github.com/salt-extensions/salt-extension-migrate"
Tracker = "https://github.com/salt-extensions/salt-extension-migrate/issues"

[project.scripts]
saltext-migrate = "saltext_migrate.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.distutils.bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[tool.distutils.sdist]
owner = "root"
group = "root"

[tool.isort]
profile = "black"
